2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * configure.ac (CFLAGS): O2 => O3.

        * PortProcedures.cpp (transcodedPortEx): Accept binary output also.

        * ProcessProcedures.cpp : Issue 45 in mosh-scheme: spawned process is still alive even when a command is not found by leque.
        When in calling spawn, exevp fails, we should terminated the forked process.

2009-02-20  kokosabu  <kokosabu@gmail.com>

        * Added make-custom-textual-input-port, make-custom-textual-output-port, put-u8.

2009-02-20  higepon  <higepon@users.sourceforge.jp>

        * Now profiler is broken. It will be fixed soon.

        * Gloc.h: Added for Global location object. It makes top-level variable lookup much faster.
                  Thanks to shiro kawai for advising me.

2009-02-19  kokosabu  <kokosabu@gmail.com>

        * CustomBinaryOutputPort.cpp : Added.

2009-02-19  higepon  <higepon@users.sourceforge.jp>

        * Now string-input-port supports port-position.

        * StandardOutputPort.h : Added. stdout/stderr doesn't support port-position.

        * StandardInputPort.h : Added. stdin doesn't support port-position.

        * test/input-port.scm : Passes all of the custom binary input port. Yey!.

        * CustomBinaryInputPort.cpp : Added get-bytevector-n for custom-binary-input-port.

2009-02-18  higepon  <higepon@users.sourceforge.jp>

        * Added port-has-set-port-position!?.

        * PortProcedures.cpp : Added port-has-port-position?. It works only for custom-binary-input-port only now.

        * Object.h (scheme): Added toPort().

        * Added : Port.h and BinaryPort.h

        * Changed Port inheritance.

        * Added open-bytevector-input-port.

        * test/input-port.scm: Added tests for (utf-16-codec).

        * lib/mosh/test.ss (mosh): Fixed the bug.

        * test/input-port.scm: Added for tests of Input ports.

        * Added port-eof?.

2009-02-17  higepon  <higepon@users.sourceforge.jp>
